# Linear-Algebra

./: .gitignore  CMakeLists.txt  README.md  keywords.txt  library.properties  qr-dynamic.cpp  qr-perftest.cpp  qr.cpp
.github/workflows/: ccpp.yml  documentation.yml  examples.yaml
Coverage/: index-sort-f.html  index-sort-l.html  index.html
Doxygen/: annotated.html  classes.html  dir_000001_000002.html  dir_000003_000004.html  dir_000003_000006.html  dir_000005_000008.html  dir_000006_000004.html  dir_000009_000002.html  dir_4d1c121ec184540d7a357c43e5632015.html  dir_4d1c121ec184540d7a357c43e5632015_dep.map  dir_4d1c121ec184540d7a357c43e5632015_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_6895197589028e462695e448a0dbe4c3.html  dir_6895197589028e462695e448a0dbe4c3_dep.map  dir_6895197589028e462695e448a0dbe4c3_dep.md5  dir_90c5bec27c94774c9e0ab767bc5d8d3f.html  dir_96dae5555f95c48c8f05efc8de927354.html  dir_96dae5555f95c48c8f05efc8de927354_dep.map  dir_96dae5555f95c48c8f05efc8de927354_dep.md5  dir_98cdb10f369f6a3b9149e010b312bf5d.html  dir_98cdb10f369f6a3b9149e010b312bf5d_dep.map  dir_98cdb10f369f6a3b9149e010b312bf5d_dep.md5  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_b0856f6b0d80ccb263b2f415c91f9e17_dep.map  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d28a4824dc47e487b107a5db32ef43c4_dep.map  dir_d28a4824dc47e487b107a5db32ef43c4_dep.md5  dir_dd568c31d99c2480b7e58f4e99afde4c.html  dir_dd568c31d99c2480b7e58f4e99afde4c_dep.map  dir_dd568c31d99c2480b7e58f4e99afde4c_dep.md5  dir_df312d8f7d56ff25fda35e4d0d5e33c8.html  examples.html  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  (+63 more)
Doxygen/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  files_2.js  files_3.js  (+41 more)
arduino/Coverage/: index-sort-f.html  index-sort-l.html  index.html
arduino/Doxygen/: annotated.html  classes.html  dir_000001_000003.html  dir_000001_000011.html  dir_000002_000003.html  dir_000004_000005.html  dir_000004_000013.html  dir_000007_000000.html  dir_000008_000000.html  dir_000009_000000.html  dir_000010_000000.html  dir_000011_000003.html  dir_000014_000000.html  dir_4d1c121ec184540d7a357c43e5632015.html  dir_4d1c121ec184540d7a357c43e5632015_dep.map  dir_4d1c121ec184540d7a357c43e5632015_dep.md5  dir_566e3080b9de3b93d5667d10c656a736.html  dir_566e3080b9de3b93d5667d10c656a736_dep.map  dir_566e3080b9de3b93d5667d10c656a736_dep.md5  dir_67f9abd426114d205bb128bb7cfc430e.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_6895197589028e462695e448a0dbe4c3.html  dir_6895197589028e462695e448a0dbe4c3_dep.map  dir_6895197589028e462695e448a0dbe4c3_dep.md5  dir_90c5bec27c94774c9e0ab767bc5d8d3f.html  dir_96dae5555f95c48c8f05efc8de927354.html  dir_96dae5555f95c48c8f05efc8de927354_dep.map  dir_96dae5555f95c48c8f05efc8de927354_dep.md5  dir_98cdb10f369f6a3b9149e010b312bf5d.html  dir_98cdb10f369f6a3b9149e010b312bf5d_dep.map  dir_98cdb10f369f6a3b9149e010b312bf5d_dep.md5  dir_9e023804e8edd078e3eb70d905dd9782.html  dir_9e023804e8edd078e3eb70d905dd9782_dep.map  dir_9e023804e8edd078e3eb70d905dd9782_dep.md5  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_b0856f6b0d80ccb263b2f415c91f9e17_dep.md5  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d28a4824dc47e487b107a5db32ef43c4_dep.map  (+91 more)
docs/: README.md
docs/Coverage/: index-sort-f.html  index-sort-l.html  index.html  shield.io.coverage.json
docs/Doxygen/: annotated.html  classes.html  dir_000003_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_90c5bec27c94774c9e0ab767bc5d8d3f.html  dir_ae3ee58244b6b1ca28d50b88c5a0b765.html  dir_ae3ee58244b6b1ca28d50b88c5a0b765_dep.map  dir_ae3ee58244b6b1ca28d50b88c5a0b765_dep.md5  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d28a4824dc47e487b107a5db32ef43c4_dep.map  dir_d28a4824dc47e487b107a5db32ef43c4_dep.md5  examples.html  files.html  functions.html  functions_b.html  (+60 more)
doxygen/: Doxyfile  custom_stylesheet.css
examples/: CMakeLists.txt
scripts/: coverage.sh  install-gtest-ci.sh
src/: CMakeLists.txt  Groups.dox  HouseholderQR.cpp  HouseholderQR.hpp  LU.cpp  LU.hpp  Linear_Algebra.h  Matrix.cpp  Matrix.hpp  NoPivotLU.cpp  NoPivotLU.hpp  PermutationMatrix.cpp  PermutationMatrix.hpp  RowPivotLU.cpp  RowPivotLU.hpp  keywords.yml
src/Arduino/: ArduinoConfig.cpp  ArduinoConfig.hpp  ArduinoCout.hpp  ArduinoMacroFix.hpp  ArduinoMatrixPrinter.cpp
src/cmake/: Config.cmake.in
src/include/linalg/: HouseholderQR.hpp  Matrix.hpp  PermutationMatrix.hpp
src/include/linalg/Arduino/: ArduinoConfig.hpp  ArduinoCout.hpp
src/include/linalg/util/: MatrixStorage.hpp
src/src/: HouseholderQR.cpp  Matrix.cpp  NoPivotLU.cpp  PermutationMatrix.cpp  RowPivotLU.cpp
src/src/Arduino/: ArduinoConfig.cpp  ArduinoMatrixPrinter.cpp
src/src/boilerplate/: HouseholderQR.ipp  NoPivotLU.ipp  RowPivotLU.ipp
src/util/: ArduinoMacroFix.hpp  CountingAllocator.hpp
test/: CMakeLists.txt  CountAllocationsTests.hpp  examples-board-fqbns.yaml  test-Add.cpp  test-HouseholderQR.cpp  test-LU.cpp  test-Matrix.cpp  test-MatrixMultiply.cpp  test-Negate.cpp  test-NoPivotLU.cpp  test-PermutationMatrix.cpp  test-Print.cpp  test-RowPivotLU.cpp  test-RowVector.cpp  test-ScalarDivide copy.cpp  test-ScalarDivide.cpp  test-ScalarMultiply.cpp  test-SquareMatrix.cpp  test-Subtract.cpp  test-Transpose.cpp  test-Vector.cpp  test-VectorProducts.cpp  test.cpp
(+1058 files in other folders)
